APIs/microsoft.com/cognitiveservices-Training/3.2/javascript-client/README.md
# custom_vision_training_client

CustomVisionTrainingClient - JavaScript client for custom_vision_training_client
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.2
- Package version: 3.2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install custom_vision_training_client --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your custom_vision_training_client from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CustomVisionTrainingClient = require('custom_vision_training_client');

var defaultClient = CustomVisionTrainingClient.ApiClient.instance;
// Configure API key authorization: apim_key
var apim_key = defaultClient.authentications['apim_key'];
apim_key.apiKey = "YOUR API KEY"
// Uncomment the following line to set a prefix for the API key, e.g. "Token" (defaults to null)
//apim_key.apiKeyPrefix['Training-Key'] = "Token"

var api = new CustomVisionTrainingClient.DomainsApiApi()
var domainId = "b30a91ae-e3c1-4f73-a81e-c270bff27c39"; // {String} The id of the domain to get information about.
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.getDomain(domainId, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v3.2/training*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CustomVisionTrainingClient.DomainsApiApi* | [**getDomain**](docs/DomainsApiApi.md#getDomain) | **GET** /domains/{domainId} | Get information about a specific domain.
*CustomVisionTrainingClient.DomainsApiApi* | [**getDomains**](docs/DomainsApiApi.md#getDomains) | **GET** /domains | Get a list of the available domains.
*CustomVisionTrainingClient.ImageApiApi* | [**createImageRegions**](docs/ImageApiApi.md#createImageRegions) | **POST** /projects/{projectId}/images/regions | Create a set of image regions.
*CustomVisionTrainingClient.ImageApiApi* | [**createImageTags**](docs/ImageApiApi.md#createImageTags) | **POST** /projects/{projectId}/images/tags | Associate a set of images with a set of tags.
*CustomVisionTrainingClient.ImageApiApi* | [**createImagesFromData**](docs/ImageApiApi.md#createImagesFromData) | **POST** /projects/{projectId}/images | Add the provided images to the set of training images.
*CustomVisionTrainingClient.ImageApiApi* | [**createImagesFromFiles**](docs/ImageApiApi.md#createImagesFromFiles) | **POST** /projects/{projectId}/images/files | Add the provided batch of images to the set of training images.
*CustomVisionTrainingClient.ImageApiApi* | [**createImagesFromPredictions**](docs/ImageApiApi.md#createImagesFromPredictions) | **POST** /projects/{projectId}/images/predictions | Add the specified predicted images to the set of training images.
*CustomVisionTrainingClient.ImageApiApi* | [**createImagesFromUrls**](docs/ImageApiApi.md#createImagesFromUrls) | **POST** /projects/{projectId}/images/urls | Add the provided images urls to the set of training images.
*CustomVisionTrainingClient.ImageApiApi* | [**deleteImageRegions**](docs/ImageApiApi.md#deleteImageRegions) | **DELETE** /projects/{projectId}/images/regions | Delete a set of image regions.
*CustomVisionTrainingClient.ImageApiApi* | [**deleteImageTags**](docs/ImageApiApi.md#deleteImageTags) | **DELETE** /projects/{projectId}/images/tags | Remove a set of tags from a set of images.
*CustomVisionTrainingClient.ImageApiApi* | [**deleteImages**](docs/ImageApiApi.md#deleteImages) | **DELETE** /projects/{projectId}/images | Delete images from the set of training images.
*CustomVisionTrainingClient.ImageApiApi* | [**getImagesByIds**](docs/ImageApiApi.md#getImagesByIds) | **GET** /projects/{projectId}/images/id | Get images by id for a given project iteration.
*CustomVisionTrainingClient.ImageApiApi* | [**getTaggedImageCount**](docs/ImageApiApi.md#getTaggedImageCount) | **GET** /projects/{projectId}/images/tagged/count | Gets the number of images tagged with the provided {tagIds}.
*CustomVisionTrainingClient.ImageApiApi* | [**getTaggedImages**](docs/ImageApiApi.md#getTaggedImages) | **GET** /projects/{projectId}/images/tagged | Get tagged images for a given project iteration.
*CustomVisionTrainingClient.ImageApiApi* | [**getUntaggedImageCount**](docs/ImageApiApi.md#getUntaggedImageCount) | **GET** /projects/{projectId}/images/untagged/count | Gets the number of untagged images.
*CustomVisionTrainingClient.ImageApiApi* | [**getUntaggedImages**](docs/ImageApiApi.md#getUntaggedImages) | **GET** /projects/{projectId}/images/untagged | Get untagged images for a given project iteration.
*CustomVisionTrainingClient.ImageApiApi* | [**querySuggestedImageCount**](docs/ImageApiApi.md#querySuggestedImageCount) | **POST** /projects/{projectId}/images/suggested/count | Get count of images whose suggested tags match given tags and their probabilities are greater than or equal to the given threshold. Returns count as 0 if none found.
*CustomVisionTrainingClient.ImageApiApi* | [**querySuggestedImages**](docs/ImageApiApi.md#querySuggestedImages) | **POST** /projects/{projectId}/images/suggested | Get untagged images whose suggested tags match given tags. Returns empty array if no images are found.
*CustomVisionTrainingClient.ImageRegionProposalApiApi* | [**getImageRegionProposals**](docs/ImageRegionProposalApiApi.md#getImageRegionProposals) | **POST** /projects/{projectId}/images/{imageId}/regionproposals | Get region proposals for an image. Returns empty array if no proposals are found.
*CustomVisionTrainingClient.PredictionsApiApi* | [**deletePrediction**](docs/PredictionsApiApi.md#deletePrediction) | **DELETE** /projects/{projectId}/predictions | Delete a set of predicted images and their associated prediction results.
*CustomVisionTrainingClient.PredictionsApiApi* | [**queryPredictions**](docs/PredictionsApiApi.md#queryPredictions) | **POST** /projects/{projectId}/predictions/query | Get images that were sent to your prediction endpoint.
*CustomVisionTrainingClient.PredictionsApiApi* | [**quickTestImage**](docs/PredictionsApiApi.md#quickTestImage) | **POST** /projects/{projectId}/quicktest/image | Quick test an image.
*CustomVisionTrainingClient.PredictionsApiApi* | [**quickTestImageUrl**](docs/PredictionsApiApi.md#quickTestImageUrl) | **POST** /projects/{projectId}/quicktest/url | Quick test an image url.
*CustomVisionTrainingClient.ProjectApiApi* | [**createProject**](docs/ProjectApiApi.md#createProject) | **POST** /projects | Create a project.
*CustomVisionTrainingClient.ProjectApiApi* | [**deleteIteration**](docs/ProjectApiApi.md#deleteIteration) | **DELETE** /projects/{projectId}/iterations/{iterationId} | Delete a specific iteration of a project.
*CustomVisionTrainingClient.ProjectApiApi* | [**deleteProject**](docs/ProjectApiApi.md#deleteProject) | **DELETE** /projects/{projectId} | Delete a specific project.
*CustomVisionTrainingClient.ProjectApiApi* | [**exportIteration**](docs/ProjectApiApi.md#exportIteration) | **POST** /projects/{projectId}/iterations/{iterationId}/export | Export a trained iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**exportProject**](docs/ProjectApiApi.md#exportProject) | **GET** /projects/{projectId}/export | Exports a project.
*CustomVisionTrainingClient.ProjectApiApi* | [**getExports**](docs/ProjectApiApi.md#getExports) | **GET** /projects/{projectId}/iterations/{iterationId}/export | Get the list of exports for a specific iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**getImagePerformanceCount**](docs/ProjectApiApi.md#getImagePerformanceCount) | **GET** /projects/{projectId}/iterations/{iterationId}/performance/images/count | Gets the number of images tagged with the provided {tagIds} that have prediction results from  training for the provided iteration {iterationId}.
*CustomVisionTrainingClient.ProjectApiApi* | [**getImagePerformances**](docs/ProjectApiApi.md#getImagePerformances) | **GET** /projects/{projectId}/iterations/{iterationId}/performance/images | Get image with its prediction for a given project iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**getIteration**](docs/ProjectApiApi.md#getIteration) | **GET** /projects/{projectId}/iterations/{iterationId} | Get a specific iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**getIterationPerformance**](docs/ProjectApiApi.md#getIterationPerformance) | **GET** /projects/{projectId}/iterations/{iterationId}/performance | Get detailed performance information about an iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**getIterations**](docs/ProjectApiApi.md#getIterations) | **GET** /projects/{projectId}/iterations | Get iterations for the project.
*CustomVisionTrainingClient.ProjectApiApi* | [**getProject**](docs/ProjectApiApi.md#getProject) | **GET** /projects/{projectId} | Get a specific project.
*CustomVisionTrainingClient.ProjectApiApi* | [**getProjects**](docs/ProjectApiApi.md#getProjects) | **GET** /projects | Get your projects.
*CustomVisionTrainingClient.ProjectApiApi* | [**importProject**](docs/ProjectApiApi.md#importProject) | **POST** /projects/import | Imports a project.
*CustomVisionTrainingClient.ProjectApiApi* | [**publishIteration**](docs/ProjectApiApi.md#publishIteration) | **POST** /projects/{projectId}/iterations/{iterationId}/publish | Publish a specific iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**trainProject**](docs/ProjectApiApi.md#trainProject) | **POST** /projects/{projectId}/train | Queues project for training.
*CustomVisionTrainingClient.ProjectApiApi* | [**unpublishIteration**](docs/ProjectApiApi.md#unpublishIteration) | **DELETE** /projects/{projectId}/iterations/{iterationId}/publish | Unpublish a specific iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**updateIteration**](docs/ProjectApiApi.md#updateIteration) | **PATCH** /projects/{projectId}/iterations/{iterationId} | Update a specific iteration.
*CustomVisionTrainingClient.ProjectApiApi* | [**updateProject**](docs/ProjectApiApi.md#updateProject) | **PATCH** /projects/{projectId} | Update a specific project.
*CustomVisionTrainingClient.SuggestTagsAndRegionsApiApi* | [**suggestTagsAndRegions**](docs/SuggestTagsAndRegionsApiApi.md#suggestTagsAndRegions) | **POST** /projects/{projectId}/tagsandregions/suggestions | Suggest tags and regions for an array/batch of untagged images. Returns empty array if no tags are found.
*CustomVisionTrainingClient.TagsApiApi* | [**createTag**](docs/TagsApiApi.md#createTag) | **POST** /projects/{projectId}/tags | Create a tag for the project.
*CustomVisionTrainingClient.TagsApiApi* | [**deleteTag**](docs/TagsApiApi.md#deleteTag) | **DELETE** /projects/{projectId}/tags/{tagId} | Delete a tag from the project.
*CustomVisionTrainingClient.TagsApiApi* | [**getTag**](docs/TagsApiApi.md#getTag) | **GET** /projects/{projectId}/tags/{tagId} | Get information about a specific tag.
*CustomVisionTrainingClient.TagsApiApi* | [**getTags**](docs/TagsApiApi.md#getTags) | **GET** /projects/{projectId}/tags | Get the tags for a given project and iteration.
*CustomVisionTrainingClient.TagsApiApi* | [**updateTag**](docs/TagsApiApi.md#updateTag) | **PATCH** /projects/{projectId}/tags/{tagId} | Update a tag.


## Documentation for Models

 - [CustomVisionTrainingClient.BoundingBox](docs/BoundingBox.md)
 - [CustomVisionTrainingClient.CustomVisionError](docs/CustomVisionError.md)
 - [CustomVisionTrainingClient.Domain](docs/Domain.md)
 - [CustomVisionTrainingClient.Export](docs/Export.md)
 - [CustomVisionTrainingClient.Image](docs/Image.md)
 - [CustomVisionTrainingClient.ImageCreateResult](docs/ImageCreateResult.md)
 - [CustomVisionTrainingClient.ImageCreateSummary](docs/ImageCreateSummary.md)
 - [CustomVisionTrainingClient.ImageFileCreateBatch](docs/ImageFileCreateBatch.md)
 - [CustomVisionTrainingClient.ImageFileCreateEntry](docs/ImageFileCreateEntry.md)
 - [CustomVisionTrainingClient.ImageIdCreateBatch](docs/ImageIdCreateBatch.md)
 - [CustomVisionTrainingClient.ImageIdCreateEntry](docs/ImageIdCreateEntry.md)
 - [CustomVisionTrainingClient.ImagePerformance](docs/ImagePerformance.md)
 - [CustomVisionTrainingClient.ImagePrediction](docs/ImagePrediction.md)
 - [CustomVisionTrainingClient.ImageProcessingSettings](docs/ImageProcessingSettings.md)
 - [CustomVisionTrainingClient.ImageRegion](docs/ImageRegion.md)
 - [CustomVisionTrainingClient.ImageRegionCreateBatch](docs/ImageRegionCreateBatch.md)
 - [CustomVisionTrainingClient.ImageRegionCreateEntry](docs/ImageRegionCreateEntry.md)
 - [CustomVisionTrainingClient.ImageRegionCreateResult](docs/ImageRegionCreateResult.md)
 - [CustomVisionTrainingClient.ImageRegionCreateSummary](docs/ImageRegionCreateSummary.md)
 - [CustomVisionTrainingClient.ImageRegionProposal](docs/ImageRegionProposal.md)
 - [CustomVisionTrainingClient.ImageTag](docs/ImageTag.md)
 - [CustomVisionTrainingClient.ImageTagCreateBatch](docs/ImageTagCreateBatch.md)
 - [CustomVisionTrainingClient.ImageTagCreateEntry](docs/ImageTagCreateEntry.md)
 - [CustomVisionTrainingClient.ImageTagCreateSummary](docs/ImageTagCreateSummary.md)
 - [CustomVisionTrainingClient.ImageUrl](docs/ImageUrl.md)
 - [CustomVisionTrainingClient.ImageUrlCreateBatch](docs/ImageUrlCreateBatch.md)
 - [CustomVisionTrainingClient.ImageUrlCreateEntry](docs/ImageUrlCreateEntry.md)
 - [CustomVisionTrainingClient.Iteration](docs/Iteration.md)
 - [CustomVisionTrainingClient.IterationPerformance](docs/IterationPerformance.md)
 - [CustomVisionTrainingClient.Prediction](docs/Prediction.md)
 - [CustomVisionTrainingClient.PredictionQueryResult](docs/PredictionQueryResult.md)
 - [CustomVisionTrainingClient.PredictionQueryTag](docs/PredictionQueryTag.md)
 - [CustomVisionTrainingClient.PredictionQueryToken](docs/PredictionQueryToken.md)
 - [CustomVisionTrainingClient.Project](docs/Project.md)
 - [CustomVisionTrainingClient.ProjectExport](docs/ProjectExport.md)
 - [CustomVisionTrainingClient.ProjectSettings](docs/ProjectSettings.md)
 - [CustomVisionTrainingClient.Region](docs/Region.md)
 - [CustomVisionTrainingClient.RegionProposal](docs/RegionProposal.md)
 - [CustomVisionTrainingClient.StoredImagePrediction](docs/StoredImagePrediction.md)
 - [CustomVisionTrainingClient.StoredSuggestedTagAndRegion](docs/StoredSuggestedTagAndRegion.md)
 - [CustomVisionTrainingClient.SuggestedTagAndRegion](docs/SuggestedTagAndRegion.md)
 - [CustomVisionTrainingClient.SuggestedTagAndRegionQuery](docs/SuggestedTagAndRegionQuery.md)
 - [CustomVisionTrainingClient.SuggestedTagAndRegionQueryToken](docs/SuggestedTagAndRegionQueryToken.md)
 - [CustomVisionTrainingClient.Tag](docs/Tag.md)
 - [CustomVisionTrainingClient.TagFilter](docs/TagFilter.md)
 - [CustomVisionTrainingClient.TagPerformance](docs/TagPerformance.md)
 - [CustomVisionTrainingClient.TrainingParameters](docs/TrainingParameters.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### apim_key


- **Type**: API key
- **API key parameter name**: Training-Key
- **Location**: HTTP header

